# astrodynamics

./: .gitignore  .gitmodules  COPYING  LICENSE  Pipfile  README.md  build.bat  pyproject.toml
cache/simulation/: test.py
data/: auto_body_registry.py  earth_moon.json  fictional_system_2460959.json  fictional_system_2460959.toml  figure-8.json  figure-8.toml  full_solar_system_with_dwarf_planets.json  full_solar_system_with_moons.json  inner_solar_system.json  inner_solar_system_2460959.json  inner_solar_system_2460959.toml  json2toml.py  solar_system_20260101.toml  solar_system_2460967.json  solar_system_2460967.toml  solar_system_dwarf_20260101.toml  solar_system_moons_20260101.toml  solar_system_moons_2460966.json  solar_system_moons_2460966.toml  sun_earth.json  sun_earth_moon_20260101.toml  sun_earth_moon_2460966.json  sun_earth_moon_2460966.toml  systeme_solaire.json  systeme_solaire.json.license  systeme_solaire.toml  test.json
in/: sun_earth.json
profiling/: README.md  __init__.py  __main__.py  profile_20251017_120133.txt  profile_propagator.py  profile_stats.py
project/: __main__.py  _version.py  data.py  ephemeris.py  formulas.py  integrals.py  integrals2.py  integrator.py  simulation.py  utilities.py  visualization.py
project/temp/: 3bp.py  fictional_ephemeris.py
project/visualization/: __init__.py  constants.py  elements.py
src/cpp/: CMakeLists.txt  main.cpp
src/project/: __init__.py  __main__.py  _version.py  data.py  ephemeris.py  exercise.py  integrals.py  simulation.py  test.cpp  utils.py
src/project/fast_module/: __init__.py  test_fast_module.py
src/project/horizons/: __init__.py
src/project/simulation/: __init__.py  integrals.py  integrator.py  model.py  presets.py  propagator.py
src/project/simulation/cpp_force_kernel/: __init__.py  _cpp_force_kernel.pyi
src/project/temp/: fictional_ephemeris.py  horizon.py
src/project/ui/: __init__.py  constants.py  elements.py
src/project/utils/: __init__.py  body_registry.py  cache.py  data.py  generate_body_registry.py  siminteg.py  simstate.py  systeme_solaire.py  time.py  time_utils.py
src/project/utils/apis/: horizons.py  systeme_solaire.py
src/project/utils/horizons/: __init__.py  const.py  ephemeris.py  utils.py
src/project/visualization/: __init__.py  constants.py  elements.py
test/: test_pointmass_derivative_consistency.py  test_simulation.py
