# --- TOOL CONFIGURATIONS ---
[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

target-version = "py314" # Adjust to your Python version

[tool.ruff.lint]

# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]

# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention = "numpy" # Accepts: "google", "numpy", or "pep257".

[[tool.mypy.overrides]]
module = "numba"
ignore_missing_imports = true

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-ra -q --strict-markers"

# --- BUILD SYSTEM ---
[build-system]
requires = ["setuptools>=80", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/project/_version.py"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["project"]

# --- PROJECT METADATA ---
[project]
name = "project"
description = "An astrodynamics library for simulation and visualization"
dynamic = ["version"]
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Michelangelo Secondo" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy",
    "matplotlib",
    "pydantic",
    "scipy",
    "pygame",
    "requests",
    "tomli-w",
]

[project.optional-dependencies]
dev = ["ruff", "colorama", "coverage", "mypy", "numba"]
test = ["pytest", "pytest-cov"]
types = ["types-requests", "types-setuptools"]

[project.urls]
Homepage = "https://github.com/mik2003/astrodynamics"
